# delere

./: .gitignore  README.md  pyproject.toml
src/delere/: cli.py  config.py
src/delere/audit/: manifest.py
src/delere/core/: extractor.py  models.py  pipeline.py  redactor.py
src/delere/detectors/: base.py  llm.py  regex.py  spacy_detector.py
src/delere/profiles/: gdpr.yaml  hipaa.yaml  loader.py  pipeda.yaml
tests/: conftest.py  test_cli.py  test_llm_detector.py  test_ocr.py  test_pipeline.py  test_profiles.py  test_redactor.py  test_regex_detector.py  test_spacy_detector.py
