[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delere"
version = "0.1.0"
description = "Secure, compliance-aware PII redaction for PDF documents"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pymupdf>=1.24",
    "spacy>=3.7",
    "regex>=2024.0",
    "pyyaml>=6.0",
    "pydantic>=2.5",
]

[project.optional-dependencies]
llm = ["ollama>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
delere = "delere.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/delere"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
